Update_title n  description

--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@
 title: Raccoon Institute
 email: chloet_2493@163.com
 description: > # this means to ignore newlines until "baseurl:"
-  Python newbie
-  Data Mining & Visualisation
+  Python newbie,
+  Data Mining & Visualisation,
   Movie Addict.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
